--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "fastify": "^3.27.4",
+    "fastify-cors": "^6.0.3",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
     "sequelize": "^6.17.0",
     "sqlite3": "^5.0.2",
     "typescript": "^4.6.2",
+    "web-vitals": "^2.1.4",
     "xlsx": "^0.18.4"
   },
   "scripts": {
